like, dislike, comment

--- a/front/telefon.html
+++ b/front/telefon.html
@@ -191,7 +191,7 @@
 									  <div class="input-group-prepend">
 									    <label class="input-group-text" for="ocena">Ocenite telefon (1 do 5):</label>
 									  </div>
-									  <select class="custom-select" name="ocena" id="ocena">
+									  <select class="custom-select" name="ocena" id="unetaOcena">
 									    <option selected>Ocena:</option>
 									    <option value="1">1</option>
 									    <option value="2">2</option>
@@ -229,7 +229,7 @@
 										<div class="input-group-prepend">
 											<span class="input-group-text">Unesite komentar</span>
 										</div>
-										<textarea class="form-control" name="komentar" id="sadrzaj"></textarea>
+										<textarea class="form-control" name="komentar" id="sadrzajKomentara"></textarea>
 									</div>
 
 									<input class="btn btn-secondary" type="submit" id="postKomentar" value="Pošalji">
