--- a/front/index.html
+++ b/front/index.html
@@ -230,7 +230,7 @@
 										</div>
 										<textarea class="form-control" name="opis" id="opis"></textarea>
 									</div>
-									<button class="btn btn-secondary" type="button"name="postTelefon"id="postTelefon">Posalji</button>
+									<button class="btn btn-secondary" type="button"name="postTelefon"id="postTelefon">Napravi</button>
 
 								</div>
 							</div>
